minify css and js and touch events for mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./images/favicon-32x32.png"
     />
     <title>Make ToDoS</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     <div class="container w-100">
@@ -50,6 +50,6 @@
         >. Coded by <a href="#">Pradeep S</a>.
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
