--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="copyright" content="iamprady" />
     <meta name="description" content="A todo app with drag and drop feature" />
     <meta name="keywords" content="todo,app,todoapp " />
-    <meta name="theme-color" content="dark" />
+    <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png" />
