--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
+          navigator.serviceWorker.register('./sw.js')
         })
       }
     </script>
