font load preconnect

--- a/index.html
+++ b/index.html
@@ -150,10 +150,14 @@ and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
       href="icons/apple-splash-1136-640.jpg"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="icon" type="image/png" sizes="32x32" href="./icons/to-do.png" />
     <title>Make ToDoS</title>
     <link rel="manifest" href="manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" rel="preload" href="css/style.min.css" as="style" />
   </head>
   <body>
