--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@ and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     <link rel="manifest" href="manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
       rel="stylesheet"
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
+      as="style"
     />
     <link rel="stylesheet" rel="preload" href="css/style.min.css" as="style" />
   </head>
